# apps/api/src/eoehelp_api/synthetic/writer.py
@@ -133,11 +133,10 @@ class SyntheticWriter:
                     entry_date=day.entry_date,
                     ate_solid_food=day.ate_solid_food,
                     dysphagia_occurred=day.dysphagia_occurred,
-                    dysphagia_severity=day.dysphagia_severity,
+                    dysphagia_relief=day.dysphagia_relief,
                     odynophagia=day.odynophagia,
                     odynophagia_severity=day.odynophagia_severity,
                     food_impaction_er_visit=day.food_impaction_er_visit,
-                    coping_actions=day.coping_actions,
                     avoided_foods_today=day.avoided_foods_today,
                     modified_foods_today=day.modified_foods_today,
                     ate_unusually_slowly=day.ate_unusually_slowly,
